--- a/index.html
+++ b/index.html
@@ -57,19 +57,19 @@
                             <li>
                                 <a href="#" class="btn-jpop">
                                     <span style="letter-spacing: -.2em; width: 2em; margin-right: .2em;">――</span>
-                                    <p>椎名林檎</p>
+                                    <span>椎名林檎</span>
                                 </a>
                             </li>
                             <li>
                                 <a href="#" class="btn-jpop">
                                     <span style="letter-spacing: -.2em; width: 2em; margin-right: .2em;">――</span>
-                                    <p>星野源</p>
+                                    <span>星野源</span>
                                 </a>
                             </li>
                             <li>
                                 <a href="#" class="btn-jpop">
                                     <span style="letter-spacing: -.2em; width: 2em; margin-right: .2em;">――</span>
-                                    <p>King Gnu</p>
+                                    <span>King Gnu</span>
                                 </a>
                             </li>
                         </ul>
