--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
                                     <span>King Gnu</span>
                                 </a>
                             </li>
+                            <li>
+                                <a href="#" class="btn-hiphop">
+                                    ><span>PUNPEE</span>
+                                </a>
+                            </li>
                         </ul>
                     </div>
                     <div class="jpop-music">
