--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
                         <ul class="hiphop-list">
                             <li>
                                 <a href="#" class="btn-hiphop">
-                                    ><span>BASI</span>
+                                    ><span class="hiphop-name">BASI</span>
                                 </a>
                             </li>
                             <li>
                                 <a href="#" class="btn-hiphop">
-                                    ><span>PUNPEE</span>
+                                    ><span class="hiphop-name">PUNPEE</span>
                                 </a>
                             </li>
                             <li>
                                 <a href="#" class="btn-hiphop">
-                                    ><span>Creepy Nuts</span>
+                                    ><span class="hiphop-name">Creepy Nuts</span>
                                 </a>
                             </li>
                         </ul>
@@ -56,20 +56,20 @@
                         <ul class="jpop-list">
                             <li>
                                 <a href="#" class="btn-jpop">
-                                    <span style="letter-spacing: -.2em; width: 2em; margin-right: .2em;">――</span>
-                                    <span>椎名林檎</span>
+                                    <span class="crossbar"></span>
+                                    <span class="jpop-name">椎名林檎</span>
                                 </a>
                             </li>
                             <li>
                                 <a href="#" class="btn-jpop">
-                                    <span style="letter-spacing: -.2em; width: 2em; margin-right: .2em;">――</span>
-                                    <span>星野源</span>
+                                    <span class="crossbar"></span>
+                                    <span class="jpop-name">星野源</span>
                                 </a>
                             </li>
                             <li>
                                 <a href="#" class="btn-jpop">
-                                    <span style="letter-spacing: -.2em; width: 2em; margin-right: .2em;">――</span>
-                                    <span>King Gnu</span>
+                                    <span class="crossbar"></span>
+                                    <span class="jpop-name">King Gnu</span>
                                 </a>
                             </li>
                         </ul>
@@ -86,23 +86,26 @@
                         <ul class="vocaloid-list">
                             <li>
                                 <a href="#" class="btn-vocaloid">
-                                    <p>ハチ</p><span>ハチ</span>
+                                    <span class="vocaloid-name">ハチ</span>
+                                    <span class="vocaloid-hover-name">ハチ</span>
                                 </a>
                             </li>
                             <li>
                                 <a href="#" class="btn-vocaloid">
-                                    <p>DECO*27</p><span>DECO*27</span>
+                                    <span class="vocaloid-name">DECO*27</span>
+                                    <span class="vocaloid-hover-name">DECO*27</span>
                                 </a>
                             </li>
                             <li>
                                 <a href="#" class="btn-vocaloid">
-                                    <p>Kanaria</p><span>Kanaria</span>
+                                    <span class="vocaloid-name">Kanaria</span>
+                                    <span class="vocaloid-hover-name">Kanaria</span>
                                 </a>
                             </li>
                         </ul>
                     </div>
                     <div class="vocaloid-music">
-                        
+                        <iframe src="https://www.youtube.com/embed/cm-l2h6GB8Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
@@ -111,5 +114,8 @@
         <footer>
 
         </footer>
+        <!--
+        <script type="text/javascript" src="favorite.js"></script>
+        -->
     </body>
 </html>
