--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         <header id="header">
             <div class="header-wrapper">
                 <div class="header-left">
-                    <h3 class="page-title">Favorite_song</h3>
+                    <div class="page-title">
+                        <a href="https://oddbary.github.io/favoritesong/" class="top-page">Favorite_song</a>
+                    </div>
                 </div>
                 <nav class="header-right">
                     <div class="header-menu">
