--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 </h1>
             </div>
             <div class="hiphop-wrapper">
-                <div class="container">
+                <div class="container" id="container">
                     <div class="hiphop">
                         <h1>HIPHOP</h1>
                         <ul class="hiphop-list">
